# ChangeLog for x11-misc/trivdm
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*trivdm-0_p20121028 (28 Oct 2012)

  28 Oct 2012; Michael Weber <xmw@gentoo.org> -files/trivdm-0_p20120321,
  -files/trivdm-0_p20120423, -trivdm-0_p20120423.ebuild,
  +files/trivdm-0_p20121028, +trivdm-0_p20121028.ebuild:
  Version bump, regular agetty style uname and clock, metal theme.

  25 Apr 2012; Michael Weber <xmw@gentoo.org> -trivdm-0_p20120321.ebuild:
  Remove old version

*trivdm-0_p20120423 (23 Apr 2012)

  23 Apr 2012; Michael Weber <xmw@gentoo.org> +files/trivdm-0_p20120423,
  +trivdm-0_p20120423.ebuild:
  Version bump w/ uname -srp

*trivdm-0_p20120321 (21 Mar 2012)

  21 Mar 2012; Michael Weber <xmw@gentoo.org> -files/trivdm-0_p20110921,
  -trivdm-0_p20110921.ebuild, -files/trivdm-0_p20110927,
  -trivdm-0_p20110927.ebuild, -files/trivdm-0_p20111010,
  -trivdm-0_p20111010.ebuild, +files/trivdm-0_p20120321,
  +trivdm-0_p20120321.ebuild:
  Version bump, add app-admin/sudo dep, clean up old version

*trivdm-0_p20111010 (10 Oct 2011)

  10 Oct 2011; Michael Weber <xmw@gentoo.org> +files/trivdm-0_p20111010,
  +trivdm-0_p20111010.ebuild:
  New version w/ more security fun

*trivdm-0_p20110927 (27 Sep 2011)

  27 Sep 2011; Michael Weber <xmw@gentoo.org> +files/trivdm-0_p20110927,
  +trivdm-0_p20110927.ebuild:
  Version bump, added CONFIG_PROTECT

*trivdm-0_p20110921 (23 Sep 2011)

  23 Sep 2011; Michael Weber <xmw@gentoo.org> +files/trivdm-0_p20110921,
  +trivdm-0_p20110921.ebuild, +metadata.xml:
  Initial import
