@@ -1,10 +1,10 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI=4
+EAPI=5
 
-inherit eutils
+inherit eutils user
 
 DESCRIPTION="trivial display manager"
 HOMEPAGE="http://xmw.de/tmp/trivdm"
